fix content alignment

--- a/assets/sass/patterns/organisms/highlight.scss
+++ b/assets/sass/patterns/organisms/highlight.scss
@@ -31,8 +31,9 @@
   @include nospace();
 
   @media only all and (min-width: #{get-rem-from-px($bkpt-site--x-wide)}em) {
+    align-items: start;
+    column-gap: 3rem;
     display: grid;
     grid-template-columns: 4fr 4fr 4fr;
-    column-gap: 3rem;
   }
 }
